# XBot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  conftest.py  current_design.md  main.py  plan.md  pyproject.toml  status.md  task.md  xbot
XBotv2/: .gitignore  main.py  plan_stage2.md  plan_stage3.md  plan_stage4.md  plan_stage5.md
XBotv2/builtin_plugins/agents/: plugin.py  plugin.yaml
XBotv2/builtin_plugins/browser/: browser.py  network.py  plugin.py  plugin.yaml
XBotv2/builtin_plugins/compact/: plugin.py  plugin.yaml
XBotv2/builtin_plugins/goal/: plugin.py  plugin.yaml
XBotv2/builtin_plugins/mcp/: callbacks.py  client.py  plugin.py  plugin.yaml  tool.py
XBotv2/builtin_plugins/skills/: permission_scope.py  plugin.py  plugin.yaml  registry.py  skill_tool.py
XBotv2/builtin_plugins/todolist/: plugin.py  plugin.yaml
XBotv2/builtin_plugins/token_manager/: budget.py  estimator.py  plugin.py  plugin.yaml  stats.py
XBotv2/builtin_plugins/workspace_instructions/: plugin.py  plugin.yaml
XBotv2/data/: plan.md
XBotv2/data/.agents/: Explorer.md  default.md
XBotv2/data/config/: config.yaml  permissions.yaml  provider.yaml  providers.yaml  sandbox.yaml  system.yaml  user.yaml
XBotv2/docsv2/: README.md  agents.md  api_inventory.md  architecture.md  behavior.md  browser.md  code_review_v1.2.md  compact.md  core.md  goal.md  hook_stage_matrix.md  hooks.md  iteration_backlog.md  phase1_3_freeze_audit.md  plugins.md  prompts.md  protocol.md  public_api.md  sdk.md  testing.md  todolist.md  token_budget_hooks.md  token_manager.md  tools.md  tui_opencode_requirements.md  web.md  workspace_config.md
XBotv2/docsv2/verification/: transport-bench-v20260605.md
XBotv2/scripts/: check_iteration.py  phase1_3_freeze_gate.py
XBotv2/tests/: conftest.py
XBotv2/tests/bench/: test_http_latency.py
XBotv2/tests/core/: conftest.py  test_agents.py  test_architecture_boundaries.py  test_background_tasks.py  test_bootstrap.py  test_browser.py  test_builtin_filesystem.py  test_cli.py  test_command.py  test_compact.py  test_content_cache.py  test_context.py  test_engine.py  test_goal.py  test_hooks.py  test_internal_messages.py  test_llm_client.py  test_mailbox.py  test_mcp.py  test_permissions.py  test_persistence.py  test_plugin_loader.py  test_plugin_store.py  test_protocol.py  test_public_api.py  test_sandbox.py  test_session.py  test_skills.py  test_sse.py  test_state.py  test_subagents.py  test_todolist.py  test_token_manager.py  test_tool_dispatch_timeout.py  test_tool_registry.py  test_tool_runtime_cache.py  test_tui_client.py  test_web_server.py  test_workspace.py  test_workspace_config.py
XBotv2/tests/integration/: test_http_transport.py  test_tui_interaction.py  test_tui_interrupt_and_usage.py
XBotv2/web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
XBotv2/web/e2e/: workbench.spec.ts
XBotv2/xbotv2/: __init__.py  __main__.py  client.py  contracts.py  web_server.py
XBotv2/xbotv2/api/: __init__.py  agents.py  commands.py  context.py  hooks.py  messages.py  paths.py  plugins.py  prompts.py  protocol.py  runtime.py  tools.py  types.py  variables.py
XBotv2/xbotv2/config/: loader.py  models.py  policy.py
XBotv2/xbotv2/core/: agents.py  (+14 more)
docs/: README.md  architecture.md  configuration.md  getting-started.md  task-mode.md  testing.md
scripts/: provider_smoke_refactor.py  run_dag_task.py
tests/: conftest.py  test_agent.py  test_personality_runtime.py  test_runtime_boundaries.py
(+77 files in other folders)
