[project]
name = "digital-human-agent"
version = "0.1.0"
description = "Single-user local digital human agent"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3",
    "openai>=1.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "textual>=0.86",
    "tiktoken>=0.7",
    # HTTP/SSE transport for the TUI server and clients (Phase E, doc §10.5).
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["XBotv2", "."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.uv]
package = false
