[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "xbotv2"
version = "0.2.0"
description = "Readable plugin-extensible client/server agent runtime"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "textual>=0.86",
    # HTTP/SSE transport for the TUI server and clients.
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "mcp>=1.27,<2",
]

[project.scripts]
xbotv2 = "xbotv2.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "coverage"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["XBotv2/tests"]
pythonpath = ["XBotv2", "."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.setuptools.packages.find]
where = ["XBotv2"]
include = ["xbotv2*", "builtin_plugins*"]
namespaces = true

[tool.setuptools.package-data]
"builtin_plugins" = ["**/plugin.yaml"]
